--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -46,45 +46,22 @@
       <div class="container">
         <h2 class="text-center">Your next trip</h2>
         <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path 'card-paris.jpg' %>);">
-              <div class="card-category">Paris</div>
-              <div class="card-description">
-                <h2>Seb's home</h2>
-                <p>Charming room with patio</p>
+          <% data.flats.each do |member,info| %>
+            <div class="col-xs-12 col-sm-4">
+              <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path info.card_picture %>);">
+                <div class="card-category"><%= info.city %></div>
+                <div class="card-description">
+                  <h2><%= info.name %></h2>
+                  <p><%= info.summary %></p>
+                </div>
+                <%= image_tag info.owner_picture, class: "card-user avatar avatar-large" %>
+                <!-- <img class="card-user avatar avatar-large" src="images/seb.jpg"> -->
+                <%= link_to "", "", class: "card-link" %>
+                <!-- <a class="card-link" href="#" ></a> -->
               </div>
-              <%= image_tag "seb.jpg", class: "card-user avatar avatar-large" %>
-              <!-- <img class="card-user avatar avatar-large" src="images/seb.jpg"> -->
-              <%= link_to "", "", class: "card-link" %>
-              <!-- <a class="card-link" href="#" ></a> -->
             </div>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path 'card-brussels.jpeg' %>);">
-              <div class="card-category">Brussels</div>
-              <div class="card-description">
-                <h2>Anne's home</h2>
-                <p>Lovely house</p>
-              </div> %>
-              <%= image_tag "anne.jpg", class: "card-user avatar avatar-large" %>
-              <!-- <img class="card-user avatar avatar-large" src="images/anne.jpg"> -->
-              <%= link_to "", "", class: "card-link" %>
-              <!-- <a class="card-link" href="#" ></a> -->
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= image_path 'card-london.jpeg' %>);">
-              <div class="card-category">London</div>
-              <div class="card-description">
-                <h2>Romain's home</h2>
-                <p>Nice flat in Piccadilly</p>
-              </div>
-              <%= image_tag "romain.jpeg", class: "card-user avatar avatar-large" %>
-              <!-- <img class="card-user avatar avatar-large" src="images/romain.jpeg"> -->
-              <%= link_to "", "", class: "card-link" %>
-              <!-- <a class="card-link" href="#" ></a> -->
-            </div>
-          </div>
+          <% end %>
+
         </div>
       </div>
     </div>
@@ -103,7 +80,7 @@
 
 
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6r87rfeGHUmazXdExlETmRBaHnuoN_WY"></script>
 
     <script type="text/javascript">
     var myLatlng = new google.maps.LatLng(48.852937,2.364178);
