--- a/source/flats/show.erb
+++ b/source/flats/show.erb
@@ -2,17 +2,53 @@
 <% flat = data.flats[owner] %>
 
 <!-- Inject flat data in template -->
-<div class="container text-left padded">
-  <ul class="list-inline">
-    <li>
-      <%= image_tag flat.owner_picture, class: "avatar-large" %>
-      <p><%= flat.owner_name %></p>
-    </li>
-    <li>
-      <h1><%= flat.summary %></h1>
-      <p><%= flat.city %></p>
-    </li>
-  </ul>
+ <div class="banner" style="background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= image_path flat.card_picture %>); height: 50vh;">
+ </div>
 
+ <div class="container padded">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-1">
+      <div class="owner-description">
+        <div class="owner-picture">
+          <%= image_tag flat.owner_picture, class: "avatar-large" %>
+          <p><%= flat.owner_name.capitalize %></p>
+        </div>
+        <div class="flat-summary">
+          <h3><%= flat.summary %></h3>
+          <p><%= flat.city %></p>
+          <% flat.rating.times do %>
+            <i class="fa fa-star" style="color: yellow"> </i>
+          <% end %>
+          <% (5 - flat.rating).times do %>
+            <i class="fa fa-star" style="color: grey"> </i>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-4">
+        <h3>Book this flat</h3>
+        <form action="#" class="form-inline">
+        <div class="row">
+          <div class="col-xs-6">
+            <input type="text" class="form-control input-lg"; style="width: 100%"; placeholder="checkin">
+          </div>
+          <div class="col-xs-6">
+            <input type="text" class="form-control input-lg"; style="width: 100%"; placeholder="checkout">
+          </div>
+          <div class="col-xs-12">
+            <select name="" id="" class="form-control input-lg"; style="width: 100%"; >
+              <option value="1">1 guest</option>
+              <option value="2">2 guests</option>
+              <option value="3">3 guests</option>
+            </select>
+          </div>
+          <div class="col-xs-12">
+            <input type="submit" class="btn btn-danger btn-lg" style="width: 100%"; value="Book it">
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
+
 
